<resources>
    <string name="app_name">SecureSMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_num_instructions">Enter the addressee phone\'s number</string>
    <string name="msg_to_send">Enter your message</string>
    <string name="phone_hint">06xxxxxxxx</string>
    <string name="msg_hint">Hello there !</string>
    <string name="but_send">Send</string>
    <string name="choose_AES">AES</string>
    <string name="choose_RSA">RSA</string>
    <string name="begin_cypher">Cyphering message to:&#160;</string>
    <string name="button_choose_contact">Choose contact</string>
</resources>
